changes on logout

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,12 +11,12 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-  <title>SMART Teacher's Assistant</title>
+  <title>APP NAME</title>
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
-<body style="background-color:rgb(49, 144, 252)" >
+<body   style="background-color: rgb(25, 17, 61)" >
   <div id="root"></div>
 </body>
 <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
